# archetype

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  notes.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: 01_embed_format_spec.py  02_compose_instruction_template.py  03_embed_format_spec.py  03_round_trip.py  04_frontmatter.py  05_tables.py  README.md
src/archetype/: README.md  __init__.py
src/archetype/markdown/: __init__.py  _ast_normalizer.py  _projector.py  _shared.py  annotations.py  elements.py  errors.py  extractor.py  introspection.py  meta_validation.py  parser.py  renderer.py  template_model.py
src/archetype/templating/: __init__.py  environment.py
tests/archetype/markdown/: test_extractor.py  test_introspection.py  test_markdown_public_api.py  test_meta_validation.py  test_parser.py  test_projector.py  test_renderer.py  test_round_trip.py  test_template_model.py
tests/archetype/markdown/fixtures/: sample_models.py
tests/archetype/templating/: test_environment.py  test_integration.py  test_resolve.py
