[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "archetype"
version = "0.1.0"
description = "Pydantic as source of truth for agentic systems"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = [
    "pydantic>=2.12.5",
    "markdown-it-py>=4.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.3",
]
requires-python = "==3.14.*"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-n 16"
asyncio_mode = "strict"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
test.cmd = "pytest tests/"
test.env = {PYTHONPATH = "src"}
lint.cmd = "ruff check --fix src/ tests/"
lint.env = {PYTHONPATH = "src"}
format.cmd = "ruff format src/ tests/"
format.env = {PYTHONPATH = "src"}
typecheck.cmd = "pyright"
typecheck.env = {PYTHONPATH = "src"}

[dependency-groups]
dev = [
    "ruff==0.14.14",
    "pyright>=1.1.408",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
