[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "archetype-md"
dynamic = ["version"]
description = "Typed markdown documents backed by Pydantic models"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = [
    "pydantic>=2.12.5",
    "markdown-it-py>=4.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.3",
]
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
keywords = ["pydantic", "markdown", "agents", "llm", "validation", "agentic", "templates", "parsing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/monkeynaut-ai/archetype"
Source = "https://github.com/monkeynaut-ai/archetype"
"Bug Tracker" = "https://github.com/monkeynaut-ai/archetype/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-n 16 --cov=archetype --cov-report=term-missing --cov-report=xml:reports/coverage.xml --cov-report=html:reports/htmlcov"
asyncio_mode = "strict"



[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[tool.pdm.scripts]
post_install.cmd = "pre-commit install"
test.cmd = "pytest tests/"
lint.cmd = "ruff check --fix src/ tests/"
format.cmd = "ruff format src/ tests/"
typecheck.cmd = "pyright"
view-coverage.cmd = "xdg-open reports/htmlcov/index.html"

[dependency-groups]
dev = [
    "ruff==0.14.14",
    "pyright>=1.1.408",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
]

[tool.coverage.run]
source = ["archetype"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
